style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}
:root{
  --background-color: #fff;
  --text-color: #000;
  --black: #000;
  --white: #fff;
}
.dark{
  --background-color: #000;
  --text-color: #fff;
  --black: #fff;
  --white: #000;
}
body{
  background: var(--background-color);
  color: var(--text-color);
  transition: background 0.9s, color 0.9s;
}
header{
  position: absolute;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 40px 100px;
  z-index: 10000;
}
header .logo-circle{
  width: 90px;
}
.rightSide{
  display: flex;  
}
.btns{
  position: relative;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  margin-left: 10px;
}
.btns ion-icon{
  font-size: 1.5em;
  color: var(--black);
}
.btns.menuToggle ion-icon{
  font-size: 3em;
}
.btns ion-icon:nth-child(2){
  display: none;
}
.btns.active ion-icon:nth-child(2){
  display: block;
}
.btns.active ion-icon:nth-child(1){
  display: none;
}
.main{
  position: relative;
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.main video{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.mask{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  user-select: none;
  mix-blend-mode: screen;
}
.dark .mask{
  filter: invert(1);
  mix-blend-mode: multiply;
}
.navigation{
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: var(--white);
  z-index: 4;
  transition: 1.00s;
}
.navigation.active{
  left: 0;
}
.navigation li{
  list-style: none;
}
.navigation li a{
  display: inline-flex;
  margin: 5px 0;
  font-size: 1.35em;
  text-decoration: none;
  color: var(--black);
  padding: 5px 20px;
  border-radius: 40px;
}
.navigation li a:hover{
  background: var(--black);
  color: var(--white);
}
.copyrightText{
  position: absolute;
  left: 100px;
  bottom: 40px;
  z-index: 5;
  font-weight: 500;
  font-size: 1em;
  color: var(--black);
  text-decoration: none;
}
.sci{
  position: absolute;
  right: 100px;
  bottom: 40px;
  z-index: 5;
  display: flex;
  flex-direction: column;
}
.sci li{
  list-style: none;
}
.sci li a{
  text-decoration: none;
  color: var(--black);
  font-size: 1.75em;
}
@media (max-width: 768px){
  header{
    padding: 20px;
  }
  .copyrightText{
    left: 20px;
    bottom: 30px;
  }
  .sci{
    right: 20px;
    bottom: 20px;
  }
}

